<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="save_this_location">Save this location?%s</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="unknown_user">Unknown user</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="gps_is_needed_for_this_to_work">GPS is needed for this to work</string>
    <string name="location_service_is_needed_for_this_to_work">The location service is needed for this to work</string>
    <string name="info_about_selecting_location">Select some location for the reminder by pointing it (and holding it for a moment if it\'s not named).</string>
    <string name="geofence_request_too_frequent">Geofences added too frequently.</string>
    <string name="undisclosed_location">Undisclosed location</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="unauthenticated">User not authenticated</string>
    <string name="add_location_reminder_button">Add location reminder button</string>
    <string name="map_drawable_desc">Some fancy picture with someone pointing something on a paper map</string>
    <string name="radius_m">Radius (m)</string>
    <string name="background_location_rationale">Background location permission is needed to notify you when you reach a geofence</string>
    <string name="fine_location_rationale">Fine location permission is needed to better locate the geofence</string>
</resources>
